[gd_scene load_steps=18 format=3 uid="uid://4xn7bop1vyhn"]

[ext_resource type="Script" path="res://main/main60español.gd" id="1_bwpj8"]
[ext_resource type="PackedScene" uid="uid://cbbr6dhnp53u1" path="res://player/player.tscn" id="2_322b8"]
[ext_resource type="Texture2D" uid="uid://d1ymcif0rou75" path="res://Background 1.png" id="2_r06sy"]
[ext_resource type="Script" path="res://main/HUD.gd" id="3_uehak"]
[ext_resource type="FontFile" uid="uid://bxv7ewrcpy8ab" path="res://assets/Kenney Bold.ttf" id="4_unyd4"]
[ext_resource type="AudioStream" uid="uid://baw06ntj1ixno" path="res://assets/audio/Level.wav" id="5_410vn"]
[ext_resource type="AudioStream" uid="uid://co8lpfbhyo0vx" path="res://assets/audio/Deprisa.wav" id="6_8t72y"]
[ext_resource type="PackedScene" uid="uid://bsb4dc6r64kb1" path="res://enemy/froggy.tscn" id="7_tvp8e"]
[ext_resource type="Texture2D" uid="uid://df665857kmetv" path="res://misc/touch_button.png" id="8_wk8lm"]
[ext_resource type="AudioStream" uid="uid://c3q5tev305uae" path="res://assets/AudiosLevels/Nivel-alto.ogg" id="9_mfu1c"]
[ext_resource type="Texture2D" uid="uid://bplcq1pleqyhs" path="res://assets/HUD/media-pause-xxl.png" id="11_1h056"]
[ext_resource type="Script" path="res://main/MenuPausa.gd" id="12_gcb41"]
[ext_resource type="Script" path="res://main/ControlAjustes.gd" id="13_h5nix"]
[ext_resource type="AudioStream" uid="uid://bm1edc1jt1spi" path="res://assets/AudiosLevels/Despause.mp3" id="14_a22sy"]
[ext_resource type="AudioStream" uid="uid://drkjrokm2e0b4" path="res://assets/AudiosLevels/Pause.wav" id="15_hmu1v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_svxkk"]
size = Vector2(73, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yjbrq"]
size = Vector2(3, 719)

[node name="Main60Español" type="Node2D"]
script = ExtResource("1_bwpj8")

[node name="Background 1-19" type="Sprite2D" parent="."]
position = Vector2(239, 360.5)
scale = Vector2(1.00833, 1.00694)
texture = ExtResource("2_r06sy")

[node name="Player" parent="." instance=ExtResource("2_322b8")]
position = Vector2(105, 44)
speed = 500

[node name="GemContainer" type="Node2D" parent="."]

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 480.0
offset_bottom = 159.0
script = ExtResource("3_uehak")

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 1.0
offset_top = 2.0
offset_right = 8.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="LabelScore" type="Label" parent="HUD/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_unyd4")
theme_override_font_sizes/font_size = 38
text = "0"

[node name="LabelTimer" type="Label" parent="HUD/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_unyd4")
theme_override_font_sizes/font_size = 38
text = "0"
horizontal_alignment = 2

[node name="LabelLevel" type="Label" parent="HUD/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("4_unyd4")
theme_override_font_sizes/font_size = 30
text = "Nivel"
horizontal_alignment = 2

[node name="LabelLevelNumber" type="Label" parent="HUD"]
layout_mode = 2
offset_top = 62.0
offset_right = 479.0
offset_bottom = 157.0
grow_horizontal = 2
pivot_offset = Vector2(16, 87)
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("4_unyd4")
theme_override_font_sizes/font_size = 30
text = "60"
horizontal_alignment = 1

[node name="GameOver" type="Label" parent="HUD"]
visible = false
layout_mode = 2
offset_left = -1.0
offset_right = 481.0
offset_bottom = 721.0
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("4_unyd4")
theme_override_font_sizes/font_size = 30
text = "Has Perdido!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelTiempo" type="Label" parent="HUD"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -46.0
offset_top = 71.0
offset_right = 434.0
offset_bottom = 159.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("4_unyd4")
theme_override_font_sizes/font_size = 15
text = "+ 5 seg"
horizontal_alignment = 1

[node name="LabelMas5Score" type="Label" parent="HUD"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -437.0
offset_top = 71.0
offset_right = 43.0
offset_bottom = 159.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("4_unyd4")
theme_override_font_sizes/font_size = 15
text = "+ 5 pts"
horizontal_alignment = 1

[node name="LabelDeprisa" type="Label" parent="HUD"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -237.0
offset_top = -3.0
offset_right = 243.0
offset_bottom = 713.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("4_unyd4")
theme_override_font_sizes/font_size = 30
text = "Deprisa!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameTimer" type="Timer" parent="."]
autostart = true

[node name="LevelAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_410vn")

[node name="Deprisa" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_8t72y")

[node name="FireflyTimer" type="Timer" parent="."]

[node name="Froggy" parent="." instance=ExtResource("7_tvp8e")]
position = Vector2(227, 586)

[node name="Platform" type="StaticBody2D" parent="."]
position = Vector2(226, 718)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform"]
position = Vector2(1, 25)
shape = SubResource("RectangleShape2D_svxkk")

[node name="Bordes" type="Node" parent="."]

[node name="Left" type="StaticBody2D" parent="Bordes"]
position = Vector2(-9, 37)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bordes/Left"]
position = Vector2(8.5, 322.5)
shape = SubResource("RectangleShape2D_yjbrq")

[node name="Right" type="StaticBody2D" parent="Bordes"]
position = Vector2(472, 37)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bordes/Right"]
position = Vector2(8.5, 322.5)
shape = SubResource("RectangleShape2D_yjbrq")

[node name="Down" type="StaticBody2D" parent="Bordes"]
position = Vector2(533, 727)
rotation = 1.56834
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bordes/Down"]
position = Vector2(-7.5, 322.5)
shape = SubResource("RectangleShape2D_yjbrq")

[node name="UP" type="StaticBody2D" parent="Bordes"]
position = Vector2(533, 7.99994)
rotation = 1.56834
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bordes/UP"]
position = Vector2(-7.5, 322.5)
shape = SubResource("RectangleShape2D_yjbrq")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ButtonContainer" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LeftButton" type="TouchScreenButton" parent="CanvasLayer/ButtonContainer"]
self_modulate = Color(1, 1, 1, 0.627451)
texture_filter = 1
position = Vector2(71, 650)
rotation = -3.14159
scale = Vector2(0.75, 0.75)
texture_normal = ExtResource("8_wk8lm")

[node name="RightButton" type="TouchScreenButton" parent="CanvasLayer/ButtonContainer"]
self_modulate = Color(1, 1, 1, 0.627451)
texture_filter = 1
position = Vector2(131, 590)
scale = Vector2(0.75, 0.75)
texture_normal = ExtResource("8_wk8lm")

[node name="UpButton" type="TouchScreenButton" parent="CanvasLayer/ButtonContainer"]
self_modulate = Color(1, 1, 1, 0.627451)
texture_filter = 1
position = Vector2(71, 590)
rotation = -1.5708
scale = Vector2(0.75, 0.75)
texture_normal = ExtResource("8_wk8lm")

[node name="DownButton" type="TouchScreenButton" parent="CanvasLayer/ButtonContainer"]
self_modulate = Color(1, 1, 1, 0.627451)
texture_filter = 1
position = Vector2(131, 650)
rotation = 1.5708
scale = Vector2(0.75, 0.75)
texture_normal = ExtResource("8_wk8lm")

[node name="NivelAlto" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_mfu1c")
volume_db = 3.0
attenuation = 1e-05

[node name="PauseButton" type="Button" parent="."]
process_mode = 1
texture_filter = 1
offset_left = 11.0
offset_top = 658.0
offset_right = 305.0
offset_bottom = 933.0
scale = Vector2(0.119141, 0.185547)
icon = ExtResource("11_1h056")
flat = true
metadata/_edit_use_anchors_ = true

[node name="MenuPausa" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("12_gcb41")
metadata/_edit_use_anchors_ = true

[node name="ControlAjustes" type="Control" parent="MenuPausa"]
process_mode = 3
process_thread_group = 2
process_thread_group_order = 0
process_thread_messages = 0
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 512.0
offset_top = 158.0
offset_right = 978.0
offset_bottom = 573.0
script = ExtResource("13_h5nix")

[node name="BackgroundBlur" type="ColorRect" parent="MenuPausa/ControlAjustes"]
process_mode = 3
layout_mode = 0
offset_left = -522.0
offset_top = -162.0
offset_right = -4.0
offset_bottom = 612.0
color = Color(0, 0, 0, 0.00392157)

[node name="ColorRect" type="ColorRect" parent="MenuPausa/ControlAjustes"]
process_mode = 3
layout_mode = 0
offset_left = -504.0
offset_top = 1.0
offset_right = -39.0
offset_bottom = 415.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="LabelTitulo2" type="Label" parent="MenuPausa/ControlAjustes"]
process_mode = 3
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -736.0
offset_top = 42.0
offset_right = -256.0
offset_bottom = 130.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("4_unyd4")
theme_override_font_sizes/font_size = 33
text = "Ajustes"
horizontal_alignment = 1

[node name="BackButton2" type="Button" parent="MenuPausa/ControlAjustes"]
process_mode = 3
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -721.0
offset_top = 161.5
offset_right = -543.0
offset_bottom = 207.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.4, 0.733333, 0.415686, 1)
theme_override_fonts/font = ExtResource("4_unyd4")
theme_override_font_sizes/font_size = 20
text = "Continuar"
flat = true

[node name="SalirButton" type="Button" parent="MenuPausa/ControlAjustes"]
process_mode = 3
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = 161.5
offset_right = -272.0
offset_bottom = 207.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.776471, 0.156863, 0.156863, 1)
theme_override_fonts/font = ExtResource("4_unyd4")
theme_override_font_sizes/font_size = 20
text = "Salir"
flat = true

[node name="VolumenLabel2" type="Label" parent="MenuPausa/ControlAjustes"]
process_mode = 3
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -728.0
offset_top = 136.0
offset_right = -588.0
offset_bottom = 166.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("4_unyd4")
theme_override_font_sizes/font_size = 20
text = "Volumen"
horizontal_alignment = 1

[node name="NumVolumenLabel2" type="Label" parent="MenuPausa/ControlAjustes"]
process_mode = 3
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -327.5
offset_top = 138.0
offset_right = -273.5
offset_bottom = 161.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("4_unyd4")
theme_override_font_sizes/font_size = 15
text = "100%"
horizontal_alignment = 1

[node name="VolumenBarra2" type="HSlider" parent="MenuPausa/ControlAjustes"]
process_mode = 3
layout_mode = 0
offset_left = -354.0
offset_top = 139.0
offset_right = -99.0
offset_bottom = 162.0
step = 5.0
value = 100.0

[node name="FullScreenButton" type="CheckButton" parent="MenuPausa/ControlAjustes"]
process_mode = 3
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -735.0
offset_top = 233.0
offset_right = -273.0
offset_bottom = 271.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_unyd4")
theme_override_font_sizes/font_size = 20
text = "Pantalla Completa"
flat = true

[node name="Despause" type="AudioStreamPlayer" parent="MenuPausa/ControlAjustes"]
stream = ExtResource("14_a22sy")
volume_db = 10.0

[node name="BackgroundBlocker" type="ColorRect" parent="MenuPausa"]
process_mode = 3
visible = false
self_modulate = Color(1, 1, 1, 0.00392157)
layout_mode = 0
offset_right = 486.0
offset_bottom = 722.0
color = Color(0, 0, 0, 1)

[node name="Pause" type="AudioStreamPlayer" parent="MenuPausa"]
stream = ExtResource("15_hmu1v")
volume_db = 15.0

[connection signal="hurt" from="Player" to="." method="_on_player_hurt"]
[connection signal="picked" from="Player" to="." method="_on_player_picked"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="timeout" from="FireflyTimer" to="." method="_on_firefly_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/ButtonContainer/LeftButton" to="Player" method="_on_left_button_pressed"]
[connection signal="released" from="CanvasLayer/ButtonContainer/LeftButton" to="Player" method="_on_left_button_released"]
[connection signal="pressed" from="CanvasLayer/ButtonContainer/RightButton" to="Player" method="_on_right_button_pressed"]
[connection signal="released" from="CanvasLayer/ButtonContainer/RightButton" to="Player" method="_on_right_button_released"]
[connection signal="pressed" from="CanvasLayer/ButtonContainer/UpButton" to="Player" method="_on_up_button_pressed"]
[connection signal="released" from="CanvasLayer/ButtonContainer/UpButton" to="Player" method="_on_up_button_released"]
[connection signal="pressed" from="CanvasLayer/ButtonContainer/DownButton" to="Player" method="_on_down_button_pressed"]
[connection signal="released" from="CanvasLayer/ButtonContainer/DownButton" to="Player" method="_on_down_button_released"]
[connection signal="finished" from="NivelAlto" to="." method="_on_nivel_alto_finished"]
[connection signal="pressed" from="PauseButton" to="MenuPausa" method="_on_pause_button_pressed"]
[connection signal="pressed" from="MenuPausa/ControlAjustes/BackButton2" to="MenuPausa/ControlAjustes" method="_on_back_button_2_pressed"]
[connection signal="pressed" from="MenuPausa/ControlAjustes/SalirButton" to="MenuPausa/ControlAjustes" method="_on_salir_button_pressed"]
[connection signal="value_changed" from="MenuPausa/ControlAjustes/VolumenBarra2" to="MenuPausa/ControlAjustes" method="_on_volumen_barra_2_value_changed"]
[connection signal="toggled" from="MenuPausa/ControlAjustes/FullScreenButton" to="MenuPausa/ControlAjustes" method="_on_full_screen_button_toggled"]
